--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   equatable: ^2.0.5
   path_provider: ^2.1.2
   uuid: ^4.3.3
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
